--- a/index.html
+++ b/index.html
@@ -3,31 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
 
     <title>Frontend Mentor | QR code component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https: //fonts.googleapis.com/css2? family= Outfit:wght@100;500 & display=swap"
+      href="https: //fonts.googleapis.com/css2? family= Roupa & display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
@@ -35,10 +17,10 @@
   <body>
     <div class="container">
       <img class="code" src="images/image-qr-code.png" alt="QRCODE" />
-      <p class="text">Improve your front-end skills by building projects</p>
+      <h2 class="text">Improve your front-end skills by building projects</h2>
       <p class="text">
-        Scan the QR code to visit Frontend Mentor and take coding skills to
-        thenext level
+        Scan the QR code to visit Frontend Mentor and take coding skills to the
+        next level
       </p>
     </div>
     <div class="attribution">
