--- a/index.html
+++ b/index.html
@@ -6,23 +6,27 @@
 
     <title>Frontend Mentor | QR code component</title>
 
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https: //fonts.googleapis.com/css2? family= Roupa & display=swap"
+      href="https: //fonts.googleapis.com/css2? família= Roupa: wght@400;700 & display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container">
       <img class="code" src="images/image-qr-code.png" alt="QRCODE" />
-      <h2 class="text">Improve your front-end skills by building projects</h2>
-      <p class="text">
-        Scan the QR code to visit Frontend Mentor and take coding skills to the
-        next level
-      </p>
+
+      <div>
+        <h2 class="text">Improve your front-end skills by building projects</h2>
+        <p class="text">
+          Scan the QR code to visit Frontend Mentor and take coding skills to
+          the next level
+        </p>
+      </div>
     </div>
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
