--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="container">
       <img class="code" src="images/image-qr-code.png" alt="QRCODE" />
 
-      <div>
-        <h2 class="text">Improve your front-end skills by building projects</h2>
-        <p class="text">
+      <div class="text">
+        <h2>Improve your front-end skills by building projects</h2>
+        <p>
           Scan the QR code to visit Frontend Mentor and take coding skills to
           the next level
         </p>
